k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  annotations:
    kubernetes.io/change-reason: "Start config"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: fc-kubernetes/express-app:v5.0
        imagePullPolicy: IfNotPresent

        # livenessProbe:
        #   httpGet:
        #     path: /probes/healthz
        #     port: 3000
        #   initialDelaySeconds: 5 # time for app to start
        #   periodSeconds: 5 # probe interval in seconds
        #   failureThreshold: 3 # number of failures before restart

        # readinessProbe:
        #   httpGet:
        #     path: /probes/ready
        #     port: 3000
        #   initialDelaySeconds: 5 # time for app to start
        #   periodSeconds: 5 # probe interval in seconds

        # startupProbe:
        #   httpGet:
        #     path: /probes/healthz
        #     port: 3000
        #   failureThreshold: 20 # number of failures before restart
        #   periodSeconds: 6 # probe interval in seconds

        # env:
        #   - name: USER_NAME
        #     value: "Ítalo"
        #   - name: USER_AGE
        #     value: "28"

        # env:
        #   - name: USER_NAME
        #     valueFrom:
        #       configMapKeyRef:
        #         name: express-env
        #         key: USER_NAME
            
        #   - name: USER_AGE
        #     valueFrom:
        #       configMapKeyRef:
        #         name: express-env
        #         key: USER_AGE

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "10m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"

        # mounts the referenced config map volume into the container
        volumeMounts:
          - mountPath: "/app/myfamily"
            name: app-config-volume

      # creates a volume shared between the containers using a config map and converts it into a file in /app/myfamily
      volumes:
        - name: app-config-volume
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
