k8s/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
