k8s/istio-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  express-service
      version: v1
  template:
    metadata:
      labels:
        app:  express-service
        version: v1
    spec:
      containers:
      - name: express
        image: fc-kubernetes/express-app:v5.1-alpha
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  express-service
      version: v2
  template:
    metadata:
      labels:
        app:  express-service
        version: v2
    spec:
      containers:
      - name: express
        image: fc-kubernetes/express-app:v5.1-beta
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app:  express-service
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
