k8s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-nodeport
spec:
  type: NodePort
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 
      nodePort: 31111 # 30000-32767
