k8s/istio-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: express-service
spec:
  host: express-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: express-service
spec:
  hosts:
  - "*"
  gateways:
  - express-gateway
  http:
  - match:
    - uri:
        prefix: /app/version
    route:
    - destination:
        host: express-service
        subset: v1
      weight: 90
    - destination:
        host: express-service
        subset: v2
      weight: 10
